--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   },
   "dependencies": {
     "nanoid": "^4.0.0",
-    "vue": "^3.2.45"
+    "vue": "^3.2.45",
+    "vue-use-popperjs": "^2.3.4"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.0.0",
