--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "id-gen",
+  "description": "Useful when you need to create id transaction",
   "private": true,
-  "version": "0.0.0",
+  "version": "0.0.2",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -9,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "date-fns": "^3.3.1",
     "nanoid": "^4.0.0",
     "vue": "^3.2.45",
     "vue-use-popperjs": "^2.3.4"
